# ChangeLog for dev-perl/Email-MessageID
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MessageID/ChangeLog,v 1.31 2014/08/22 20:55:51 axs Exp $

*Email-MessageID-1.402.0-r1 (22 Aug 2014)

  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +Email-MessageID-1.402.0-r1.ebuild, -Email-MessageID-1.402.0.ebuild:
  bumped EAPI to 5; committed directly to stable as no other changes present and
  revbump helps stable systems to keep from dieing on perl-5.18 upgrade

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  17 Jun 2012; Raúl Porcel <armin76@gentoo.org>
  Email-MessageID-1.402.0.ebuild:
  Drop alpha/ia64/sparc keywords

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Email-MessageID-1.402.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Email-MessageID-1.402.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Email-MessageID-1.402.0 (31 Aug 2011)

  31 Aug 2011; Torsten Veller <tove@gentoo.org>
  +Email-MessageID-1.402.0.ebuild:
  Change version scheme

*Email-MessageID-1.402 (14 Jan 2011)

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Email-MessageID-1.35.1.ebuild,
  -Email-MessageID-1.40.1.ebuild, -Email-MessageID-1.40.2.ebuild,
  +Email-MessageID-1.402.ebuild:
  Convert ebuild version. Cleanup

  13 Jan 2011; Brent Baude <ranger@gentoo.org>
  Email-MessageID-1.40.2.ebuild:
  Marking Email-MessageID-1.40.2 ppc stable for bug 341865

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org>
  Email-MessageID-1.40.2.ebuild:
  alpha/ia64/sparc stable wrt #341865

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  Email-MessageID-1.40.2.ebuild:
  ppc64 stable wrt #341865

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  Email-MessageID-1.40.2.ebuild:
  Stable on amd64 wrt bug #341865

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  Email-MessageID-1.40.2.ebuild:
  x86 stable, bug 341865
