@@ -1,0 +1,27 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MessageID/Email-MessageID-1.405.0.ebuild,v 1.1 2015/05/10 17:02:34 dilfridge Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=RJBS
+MODULE_VERSION=1.405
+inherit perl-module
+
+DESCRIPTION="Generate world unique message-ids"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~sparc-solaris ~x86-solaris"
+IUSE="test"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	>=virtual/perl-ExtUtils-MakeMaker-6.300.0
+	test? (
+		>=virtual/perl-Test-Simple-0.960.0
+		dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage
+	)
+"
+
+SRC_TEST="do parallel"
