@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Email-MessageID
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MessageID/ChangeLog,v 1.31 2014/08/22 20:55:51 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MessageID/ChangeLog,v 1.32 2015/05/10 17:02:34 dilfridge Exp $
+
+*Email-MessageID-1.405.0 (10 May 2015)
+
+  10 May 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +Email-MessageID-1.405.0.ebuild:
+  Version bump
 
 *Email-MessageID-1.402.0-r1 (22 Aug 2014)
 
